--- a/src/app/consumptions/food/food.component.scss
+++ b/src/app/consumptions/food/food.component.scss
@@ -32,9 +32,10 @@
   }
 }
 .courses {
-  padding: 0 .5rem;
   .first-list {
     // border: 1px solid red;
+    padding: 0;
+    margin: 0.5rem;
     li {
       .add-course {
         margin-bottom: .5rem;
@@ -135,7 +136,7 @@
 .courses-list {
   display: grid;
   grid-column-gap: 0.5rem;
-  grid-row-gap: 1rem;
+  grid-row-gap: 0.5rem;
   // border: 5px solid var(--text-color-orange);
   // border: 10px solid green;
 
