--- a/src/app/consumptions/food/add-course/add-course.component.html
+++ b/src/app/consumptions/food/add-course/add-course.component.html
@@ -41,9 +41,9 @@
     <textarea type="text" matInput formControlName="remarkEnglish" placeholder="Remark">
     </textarea>
   </mat-form-field>
-  <mat-form-field>
+  <!-- <mat-form-field>
     <input type="number" matInput formControlName="listPosition" placeholder="list position">
-  </mat-form-field>
+  </mat-form-field> -->
 
 </form>
 <div class="buttons" fxLayout="column" fxLayoutGap="1rem">
