--- a/src/app/navigation/sidenav/sidenav.component.scss
+++ b/src/app/navigation/sidenav/sidenav.component.scss
@@ -3,7 +3,7 @@ mat-nav-list {
     text-decoration: none;
     color: var(--text-color-bright-orange);
     font-size: 1.1rem;
-    margin: .5rem;
+
     // border: 1px solid red;
     text-transform: uppercase;
   }
@@ -12,11 +12,15 @@ mat-nav-list {
   }
   .hr {
     opacity: 0.1;
-    width: 80%;
-    margin: .3rem 0;
+    // width: 80%;
+    // margin: .3rem 0;
   }
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
 
 
 a:hover,
