--- a/src/app/consumptions/food/food.component.scss
+++ b/src/app/consumptions/food/food.component.scss
@@ -116,6 +116,9 @@
                     color: white;
                     // border: 1px solid white
                   }
+                  .invalid-chevron {
+                    color: transparent;
+                  }
                   .chevrons:hover {
                     cursor: pointer;
                   }
