removed listposition from beers

--- a/src/app/consumptions/beer/add-beer/add-beer.component.html
+++ b/src/app/consumptions/beer/add-beer/add-beer.component.html
@@ -45,14 +45,14 @@
     />
   </mat-form-field>
 
-  <mat-form-field>
+  <!-- <mat-form-field>
     <input
       type="number"
       matInput
       formControlName="listPosition"
       placeholder="LIST POSITION"
     />
-  </mat-form-field>
+  </mat-form-field> -->
 
   <mat-form-field>
     <textarea
