--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,12 @@ ul {
   list-style: none;
   padding: 0;
 }
+.panelClass {
+  width: 100vw;
+  max-width: 350px;
+  height: 100vh;
+  
+}
 
 .panelClassFailure {
   border: 10px solid red
@@ -41,4 +47,7 @@ button {
   width: 100vw !important;
   max-width: 400px;
   max-height: 95vh;
+  padding: 0;
+  border: 5px solid var(--text-color-orange);
+  // border-radius: 0px !important;
 }
